--- a/Landsat_colormaps_GEE.ipynb
+++ b/Landsat_colormaps_GEE.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "5ca229b6",
    "metadata": {},
    "outputs": [],
@@ -78,14 +78,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "397be0de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=a5Iy4EzTnuozsZTgT_zyIT7NfWpE1WgYg-k_256gfzg&tc=lw-OOiaPrHPqRh75EOthsLxQOuEtS7Y7bdJAeKhmLFI&cc=MwZvh4-3UpKZk6ZSttdJOxkqjyK2rmldX8HbxlYACBs>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=a5Iy4EzTnuozsZTgT_zyIT7NfWpE1WgYg-k_256gfzg&tc=lw-OOiaPrHPqRh75EOthsLxQOuEtS7Y7bdJAeKhmLFI&cc=MwZvh4-3UpKZk6ZSttdJOxkqjyK2rmldX8HbxlYACBs</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter verification code:  4/1ARtbsJoeWirzyoMnrXB4gPRJsY4hinxhU81u8gLkefUdfjs8ktyCCt7PbRY\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
    "source": [
     "# Authenticate and initialize GEE\n",
-    "#ee.Authenticate()\n",
-    "#ee.Initialize()"
+    "ee.Authenticate()\n",
+    "ee.Initialize()"
    ]
   },
   {
@@ -126,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "ab0dae17",
    "metadata": {},
    "outputs": [
@@ -334,7 +366,7 @@
        "  'THERMAL_SAMPLES': 9171}}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,14 +419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "0264aef5",
    "metadata": {},
    "outputs": [],
    "source": [
     "pt = ee.Geometry.Point([-119.69, 34.42])   # Point corresponding to Santa Barbara, CA\n",
-    "                                           # NOTE: syntax for ee.Geometry.Point is [longitude, latitude]\n",
-    "# 122.8663, 38.0512 "
+    "                                           # NOTE: syntax for ee.Geometry.Point is [longitude, latitude]\n"
    ]
   },
   {
@@ -407,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "27dbdaf7",
    "metadata": {},
    "outputs": [],
@@ -432,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "7fd328b3",
    "metadata": {},
    "outputs": [],
@@ -454,14 +485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "f4de27fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20958467d5e243329c8f8729d8528b6b",
+       "model_id": "0b75b2c2945b40b9b82e550b51e26d53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,7 +500,7 @@
        "Map(center=[34.42, -119.69], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(child…"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "id": "750a99b1",
    "metadata": {},
    "outputs": [],
@@ -516,13 +547,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "id": "e4646a1b-3d01-4bc4-9f39-db4916d93245",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Command to extract all data over appropriate time, perform temporal averaging\n",
-    "dat_drght=dat_nocld.filter(ee.Filter.date('2018-12-10', '2019-12-31')).mean();"
+    "dat_drght=dat_nocld.filter(ee.Filter.date('2017-12-10', '2018-12-31')).mean();"
    ]
   },
   {
@@ -537,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "id": "52663eb4-4080-4432-9162-eec8cf2c5d59",
    "metadata": {},
    "outputs": [],
@@ -560,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "id": "c2d7a500-c403-48f9-8ff5-2ef7175f8109",
    "metadata": {},
    "outputs": [],
@@ -582,20 +613,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "c433d67e-48aa-40cb-bd14-82e6e3d207d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add another layer to the map showing false color images\n",
-    "Map2 = Map.addLayer(dat_drght,visParsFire,'7-5-2 False Color')\n",
+    "Map.addLayer(dat_drght,visParsFire,'7-5-2 False Color')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "39c96c6b-2e06-4c2b-aa19-70f17f2fcc7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3eb8721e1a94955b2c3955b3390d234",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[37.7749, -122.4194], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(c…"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#doing this for san francisco\n",
+    "pt = ee.Geometry.Point([-122.4194, 37.7749])\n",
+    "gdat_filt = gdat.filterBounds(pt)\n",
+    "# Visualization parameters: which bands are we assigning to R, G, and B?\n",
+    "visParams = {'bands': ['B4', 'B3', 'B2'],\n",
+    "             'min': 0,\n",
+    "             'max': 0.3\n",
+    "            }\n",
+    "Map2 = geemap.Map(center=[37.7749, -122.4194], zoom=8)\n",
+    "\n",
+    "Map2\n",
+    "# Use filter to extract all \"non-cloudy\" images: ones with less than 20% cloud cover\n",
+    "dat_nocld=gdat_filt.filter('CLOUD_COVER < 0.2')\n",
+    "# Command to extract all data over appropriate time, perform temporal averaging\n",
+    "dat_drght=dat_nocld.filter(ee.Filter.date('2020-1-01', '2020-12-31')).mean();\n",
+    "\n",
+    "# Add layer to the basemap\n",
+    "Map2.addLayer(dat_drght, visParams)\n",
+    "\n",
+    "# False color image parameters: fire burn scar\n",
+    "visParsFire = {'bands': ['B7', 'B5', 'B2'],\n",
+    "             'min': 0,\n",
+    "             'max': 0.3\n",
+    "            }\n",
+    "# Add another layer to the map showing false color images\n",
+    "Map2.addLayer(dat_drght,visParsFire,'7-5-2 False Color')\n",
     "Map2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c96c6b-2e06-4c2b-aa19-70f17f2fcc7d",
+   "id": "9c46cebe-0306-4f44-adf1-132434b99442",
    "metadata": {},
    "outputs": [],
    "source": []
